test/files/neg/t0673.check
Test.scala:2: error: Java class JavaClass.InnerClass is not a value
  val x = JavaClass.InnerClass
                    ^
one error found
